# uqtestfuns

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.MD  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: draft-pdf.yml  main.yml  mirror.yml
docs/: _config.yml  _toc.yml  api.rst  conf.py  glossary.md  index.md  intro.md  markdown.md  references.bib
docs/api/: funparams.rst  input-spec.rst  list-functions.rst  marginal.rst  overview.md  probinput.rst  univdist.rst  uqtestfun-abc.rst  uqtestfun.rst  wing_weight.rst
docs/development/: about.md  adding-marginal-distribution.md  adding-test-function-docs.md  adding-test-function-implementation.md  adding-univariate-distribution.md  code-of-conduct.md  making-a-pull-request.md  overview.md  setting-up-dev-env.md
docs/fundamentals/: integration.md  metamodeling.md  optimization.md  overview.md  reliability.md  sensitivity.md
docs/getting-started/: about-uq-test-functions.md  citing.md  creating-a-built-in.md  creating-a-custom.md  creating-a-default.md  obtaining-and-installing.md  tutorial-built-in-functions.md  tutorial-custom-functions.md  tutorial-reliability.md  tutorial-sensitivity.md  tutorials.md
docs/metafunction/: about.md
docs/prob-input/: available.md  overview.md  preliminaries.md  probabilistic-input.md  univariate-random-variable.md
docs/prob-input/marginal-distributions/: beta.md  exponential.md  gumbel.md  logitnormal.md  lognormal.md  normal.md  triangular.md  trunc-gumbel.md  trunc-normal.md  uniform.md
docs/prob-input/univariate-distributions/: beta.md  exponential.md  gumbel.md  logitnormal.md  lognormal.md  normal.md  triangular.md  trunc-gumbel.md  trunc-normal.md  uniform.md
docs/test-functions/: ackley.md  alemazkoor-20d.md  alemazkoor-2d.md  available.md  borehole.md  bratley1992a.md  bratley1992b.md  bratley1992c.md  bratley1992d.md  cantilever-beam-2d.md  cheng2d.md  circular-pipe-crack.md  coffee-cup.md  convex-fail-domain.md  currin-sine.md  damped-cosine.md  damped-oscillator-reliability.md  damped-oscillator.md  dette-8d.md  dette-curved.md  dette-exp.md  flood.md  forrester.md  four-branch.md  franke-1.md  franke-2.md  franke-3.md  franke-4.md  franke-5.md  franke-6.md  friedman-10d.md  friedman-6d.md  friedman10d.md  friedman6d.md  gayton-hat.md  genz-continuous.md  genz-corner-peak.md  genz-discontinuous.md  genz-gaussian.md  genz-oscillatory.md  (+42 more)
docs/test_functions/: borehole.md  metamodeling.md  wing_weight.md
docs/test_functions/.ipynb_checkpoints/: wing_weight-checkpoint.ipynb
joss/: paper.bib  paper.md
src/uqtestfuns/: __init__.py  global_settings.py  hello.py  helpers.py  utils.py
src/uqtestfuns/core/: __init__.py  custom_typing.py  parameters.py  uqtestfun.py  uqtestfun_abc.py  utils.py
src/uqtestfuns/meta/: __init__.py  basis_functions.py  metaspec.py  uqmetatestfun.py
src/uqtestfuns/test_functions/: __init__.py  ackley.py  alemazkoor.py  available.py  borehole.py  bratley1992.py  cantilever_beam_2d.py  cheng2010.py  circular_pipe_crack.py  coffee_cup.py  convex_fail_domain.py  currin_sine.py  damped_cosine.py  damped_oscillator.py  default.py  default_args.py  dette.py  flood.py  forrester.py  four_branch.py  franke.py  franke_1.py  franke_2.py  franke_3.py  friedman.py  gayton_hat.py  genz.py  gramacy2007.py  higdon_sine.py  holsclaw_sine.py  hyper_sphere.py  ishigami.py  lim.py  linkletter.py  mclain.py  moon3d.py  morris2006.py  oakley2002.py  oakley_ohagan_1d.py  otl_circuit.py  (+18 more)
tests/: conftest.py  old_ackley.py  old_functions.py  old_ishigami.py  old_otl_circuit.py  old_piston.py  old_sulfur.py  test_ackley.py  test_ishigami.py  test_list_functions.py  test_multivariate_input.py  test_otl_circuit.py  test_package.py  test_piston.py  test_sobol_g.py  test_sulfur.py  test_test_functions.py  test_univariate_beta.py  test_univariate_gumbel.py  test_univariate_input.py  test_univariate_logitnormal.py  test_univariate_lognormal.py  test_univariate_normal.py  test_univariate_triangular.py  test_univariate_trunc_gumbel.py  test_univariate_trunc_normal.py  test_univariate_truncnormal.py  test_univariate_uniform.py  test_uqmetaspec.py  test_uqmetatestfun.py  test_uqtestfun.py  test_wing_weight.py
tests/builtin_test_functions/: test_ackley.py  test_coffee_cup.py  test_franke.py  test_grammacy_1dsine.py  test_ishigami.py  test_mclain.py  test_morris2006.py  test_otl_circuit.py  test_piston.py  test_portfolio_3d.py  test_rosenbrock.py  test_sobol_g.py  test_sobol_levitan.py  test_sulfur.py  test_test_functions.py
tests/core/: test_funparams.py  test_input_spec.py  test_uqtestfun.py
tests/core/prob_input/: test_multivariate_input.py  test_prob_input.py  test_univariate_beta.py  test_univariate_gumbel.py  (+9 more)
tests/metafun/: test_uqmetaspec.py  test_uqmetatestfun.py
(+21 files in other folders)
