[metadata]
name = uqtestfuns
version = 0.1.0
url = https://github.com/damar-wicaksono/uqtestfuns
author = Damar Wicaksono
author_email = damar.wicaksono@outlook.com
description = A Python3 library of test functions from the uncertainty quantification community with a common interface for benchmarking purpose.
long_description = file: README.md
long_description_content_type = text/markdown
platform = ANY
license = MIT
license_files = LICENSE
classifiers = 
   LICENSE :: OSI Approved :: MIT License

[options]
package_dir =
   =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts =
   --cov

[coverage:run]
source = uqtestfuns
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
   src/uqtestfuns
   */site-packages/uqtestfuns