[metadata]
name = uqtestfuns
version = 0.1.0
url = https://github.com/damar-wicaksono/uqtestfuns
author = Damar Wicaksono
author_email = damar.wicaksono@outlook.com
description = A Python3 library of test functions from the uncertainty quantification community with a common interface for benchmarking purpose.
long_description = file: README.md
long_description_content_type = text/markdown
platform = ANY
license = MIT
license_files = LICENSE
classifiers = 
   LICENSE :: OSI Approved :: MIT License

[options]
package_dir =
   =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
   numpy>=1.13.3
   scipy>=1.9.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts =
   --cov
   --strict-markers
xfail_strict = True

[coverage:run]
source = uqtestfuns
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
   src/uqtestfuns
   */site-packages/uqtestfuns

[tox:tox]
isolated_build = True
envlist =
   py -3.7
   py -3.8
   py -3.9
   py -3.10

[testenv]
deps =
   pytest
   pytest-cov
   pytest-randomly
   numpy>=1.13.3
   scipy>=1.9.0
commands = pytest {posargs}

