[metadata]
name = uqtestfuns
version = 0.1.1
url = https://github.com/damar-wicaksono/uqtestfuns
author = Damar Wicaksono
author_email = damar.wicaksono@outlook.com
description = A Python3 library of test functions from the uncertainty quantification community with a common interface for benchmarking purpose.
long_description = file: README.md
long_description_content_type = text/markdown
platform = ANY
license = MIT
license_files = LICENSE
classifiers = 
   License :: OSI Approved :: MIT License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Topic :: Scientific/Engineering
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Software Development :: Libraries :: Python Modules
   Intended Audience :: Science/Research

[options]
package_dir =
   =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
   numpy>=1.13.3
   scipy>=1.7.3
   tabulate>=0.8.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=4.6
    pytest-cov>=2.12.0
    pytest-randomly
    black
    flake8
    flake8-bugbear
    mypy
    types-tabulate
    types-setuptools
docs =
    jupyter-book==0.13.2
    sphinx==4.5.0
    matplotlib>=3.7.0
all =
    uqtestfuns[dev]
    uqtestfuns[docs]

[tool:pytest]
testpaths = tests
addopts =
   --cov
   --strict-markers
xfail_strict = True

[coverage:run]
source = uqtestfuns
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
   src/uqtestfuns
   */site-packages/uqtestfuns

[tox:tox]
isolated_build = True
envlist =
   py37
   py38
   py39
   py310

[testenv]
deps =
   pytest
   pytest-cov
   pytest-randomly
   numpy>=1.13.3
   scipy>=1.7.3
   tabulate>=0.8.10
commands = pytest {posargs}

[testenv:typecheck]
deps = 
   pytest
   mypy
   types-tabulate
   types-setuptools
commands = mypy --ignore-missing-imports {posargs:src tests}

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[mypy-uqtestfuns.meta.metaspec]
ignore_errors = True

[mypy-test_uqmetaspec]
ignore_errors = True

[mypy-test_uqmetatestfun]
ignore_errors = True

[testenv:format]
skip_install = True
deps = 
   black
commands = black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
   flake8
   flake8-bugbear
max-line-length = 79
commands = flake8 {posargs:src tests}
